Library split & progress on application
* The library 'pdx_data_tools' had been split to `martinlyra/pdx_data_tools`
* Progress include on trying to abridge Angular with the application

--- a/lib/templates/app_component.html
+++ b/lib/templates/app_component.html
@@ -12,8 +12,8 @@ Species:
 
     </div>
     <div id="traits">
-        <item-selection id="available"></item-selection>
-        <item-selection id="selected"></item-selection>
+        <item-selection #traits_available></item-selection>
+        <item-selection #traits_selected></item-selection>
     </div>
 </div>
 
